--- a/Documentacion/cap_010.tex
+++ b/Documentacion/cap_010.tex
@@ -1256,7 +1256,7 @@
 
 	El dominio del proyecto se sitúa alrededor de un equipo de natación, el cuál está formado por personal que trabaja en él en distintos ámbitos. Sin entrar en detalle, principalmente existe una directiva y un cuerpo técnico, los cuales trabajan para conseguir objetivos en común.  
 	
-	 A pesar de que los cuerpos técnicos de los equipos están formados por varios integrantes (directores técnicos, técnicos y preparadores físicos), el entrenador es la principal figura en el desarrollo deportivo. Es la persona que se encarga de un grupo de nadadores con el fin de obtener unos resultados a final de temporada. El proceso completo está definido en la figura \ref{fig:modelo_dominio}.
+	 A pesar de que los cuerpos técnicos de los equipos están formados por varios integrantes (directores técnicos, técnicos y preparadores físicos), el entrenador es la principal figura en el desarrollo deportivo. Es la persona que se encarga de un grupo de nadadores con el fin de obtener unos resultados a final de temporada. El proceso completo que desarrolla está definido en la figura \ref{fig:modelo_dominio}.
 	
 	\begin{figure}
 	  \centering
@@ -1265,7 +1265,7 @@
 	  \label{fig:modelo_dominio}
 	\end{figure}
 	
-	El recurso activo más importante en un equipo de natación son los nadadores. Los entrenadores dirigen grupos de nadadores agrupados por categorías, ayudando ello a que se puedan aplicar metodologías de entrenamientos a grupos homogéneos. Es cierto que, a pesar de que este sea el caso ideal, no siempre es posible. Hay veces en los que hay que agrupar a nadadores de diferentes edades para formar grupos. Los ejemplos más comunes que ocasionan esta situación son: la falta de espacio en las instalaciones donde se realizan las sesiones de entrenamientos o la falta de nadadores debido a que es un equipo pequeño. Estas razones son las causantes de que en el modelo del dominio se exprese que un entrenador puede dirigir a cualquier nadador, independientemente de la categoría a la que pertenezca.
+	El recurso activo más importante en un equipo de natación son los nadadores. Los entrenadores dirigen grupos de nadadores agrupados por categorías, ayudando ello a que se puedan aplicar metodologías de entrenamientos a grupos homogéneos. Es cierto que, a pesar de que este sea el caso ideal, no siempre es posible. Hay veces en los que hay que agrupar a nadadores de diferentes edades para formar grupos. Los ejemplos más comunes que ocasionan esta situación son: la falta de espacio en las instalaciones donde se realizan las sesiones de entrenamientos o la falta de nadadores, debido a que es un equipo pequeño. Estas razones son las causantes de que en el modelo del dominio se exprese que un entrenador puede dirigir a cualquier nadador, independientemente de la categoría a la que pertenezca.
 	
 	Para controlar a cada nadador, el entrenador genera fichas que describen a cada uno de los nadadores. En ella se almacenan los datos personales, los datos de contacto y resultados obtenidos en test o competiciones. Sobre esto se hablará posteriormente.
 	
@@ -1277,7 +1277,7 @@
 		\item{{\bf Macrociclo} es un bloque de mesociclos. La idea equivale al concepto de periodo de entrenamiento, los que normalmente suelen ir separados por reposos. } 
 	\end{itemize}
 	
-	Uno de los fines de la planificación es obtener unos niveles de carga y volumen de cada microciclo, o lo que es lo mismo, especificar qué cantidad de metros y a qué intensidad se tienen que realizar cada una de las sesiones de entrenamientos. Es por ello, por lo que una sesión de entrenamiento contiene varios ejercicios de distinta tipología. Cada ejercicio refleja las capacidad que se trabaja, siendo los ejercicios aeróbicos \footnote{Aeróbicos incluyen cualquier tipo de ejercicio que se practique a niveles moderados de intensidad durante periodos de tiempo largos.}, anaeróbicos \footnote{Anaeróbicos comprenden actividades breves basadas en la fuerza.} y de técnica \footnote{La técnica hace referencia a la mejora de cada uno de los estilos de natación.} los más usuales.
+	Uno de los fines de la planificación es obtener unos niveles de carga y volumen de cada microciclo, o lo que es lo mismo, especificar qué cantidad de metros y a qué intensidad se tienen que realizar cada una de las sesiones de entrenamientos. Es por ello, por lo que una sesión de entrenamiento contiene varios ejercicios de distinta tipología. Cada ejercicio refleja la capacidad que se trabaja, siendo los ejercicios aeróbicos \footnote{Aeróbicos incluyen cualquier tipo de ejercicio que se practique a niveles moderados de intensidad durante periodos de tiempo largos.}, anaeróbicos \footnote{Anaeróbicos comprenden actividades breves basadas en la fuerza.} y de técnica \footnote{La técnica hace referencia a la mejora de cada uno de los estilos de natación.} los más usuales.
 	
 	La especificación de cada ejercicio normalmente está compuesta por bloques, series, distancia, estilo que se nada y detalles más precisos que en el modelo se engloban como {\it observación}. Un ejemplo es {\it 2x(4x100 Mariposa) técnica variada}, el cuál expresa que se realicen 2 bloques de 4 series de 100 metros mariposa, haciendo ejercicios variados de distinta técnica. Esto sumaría un volumen total de 800 metros, generando una carga que se calcula a partir de un parámetro denominado {\it ``índice de Mujika''}.
 	
@@ -1287,12 +1287,11 @@
 	
 	Debido a que en el control está el éxito, para comprobar las capacidades de cada nadador, un entrenador realiza diferentes pruebas o {\it test}. Éstos pueden ser de diferente tipo, siendo los principales los que miden la resistencia, velocidad y otras capacidad físicas (tales como envergadura, talla o peso). Estas pruebas se realizan a lo largo de la temporada, obteniendo resultados que se almacenan también en la ficha del nadador.
 	
-	    
+	Por último, cada entrenador tiene un diario en el que registra las incidencias o sucesos que ocurren a lo largo de una temporada. Aporta información en una etapa de {\it feedback} \footnote{La realimentación, también denominada retroalimentación o feedback, significa ‘ida y vuelta’ y es, desde el punto de vista social y psicológico, el proceso de compartir observaciones, preocupaciones y sugerencias, con la intención de recabar información, a nivel individual o colectivo, para intentar mejorar el funcionamiento de una organización o de cualquier grupo formado por seres humanos.}, donde lo que importa es observar los sucesos del pasado para mejorar el proceso de entrenamiento (posibles cambios en el proceso de realización de planificación, ver como funciona un determinado ejercicio sobre una categoría o anotar competiciones a las que no ir en temporadas próximas son ejemplos de datos a añadir en el diario).    
 	% -----------------------------------------------------------------------------
 	%  NOTA: Añadir al modelo de dominio los tipos de ejercicios e índice e Mujika
 	%	Corregir tilde de Especificación de Ejercicio -> observación
 	% -----------------------------------------------------------------------------
-
 
 	
 % subsection construcción_del_modelo_del_dominio (end)
