--- a/Documentacion/glosario.bib
+++ b/Documentacion/glosario.bib
@@ -1,15 +1,114 @@
-@GLOSSDEF{piconet, 
-    word       = {piconet}, 
-    definition = {Red de dispositivos que se conectan utilizando Bluetooth. 
-                  Puede constar de dos a ocho dispositivos. 
-                  En una piconet habr\'a siempre un ''maestro'' y los dem\'as ser\'an ''esclavos''.}, 
-    sort-word  = {piconet} 
+@GLOSSDEF{entrenador, 
+    word       = {entrenador}, 
+    definition = {Persona cuyo oficio o afición consiste en preparar y adiestrar a personas o animales, generalmente para la práctica de un deporte.}, 
+    sort-word  = {entrenador} 
 }
 
-@GLOSSDEF{hola2, 
-    word       = {hola2}, 
-    definition = {Red de dispositivos que se conectan utilizando Bluetooth. 
-                  Puede constar de dos a ocho dispositivos. 
-                  En una piconet habr\'a siempre un ''maestro'' y los dem\'as ser\'an ''esclavos''.}, 
-    sort-word  = {hola2}
+@GLOSSDEF{entrenamiento, 
+    word       = {entrenamiento}, 
+    definition = {Preparación física y técnica que se realiza para perfeccionar el ejercicio de una actividad deportiva o lúdica.}, 
+    sort-word  = {entrenamiento} 
+}
+
+@GLOSSDEF{calendario, 
+    word       = {calendario}, 
+    definition = {Sistema de división del tiempo.
+					Entiéndase como calendario deportivo, donde se establecen cada una de las competiciones que se realizan a lo largo de una temporada de natación.}, 
+    sort-word  = {calendario} 
+}
+
+@GLOSSDEF{nadador, 
+    word       = {nadador}, 
+    definition = {Persona que practica la natación..}, 
+    sort-word  = {nadador} 
+}
+
+@GLOSSDEF{competicion, 
+    word       = {competición}, 
+    definition = {Prueba en la que se lucha por conseguir un triunfo deportivo. Específicamente, competición de natación.}, 
+    sort-word  = {competición} 
+}
+
+@GLOSSDEF{test, 
+    word       = {test}, 
+    definition = {Prueba destinada a evaluar aptitudes.}, 
+    sort-word  = {test} 
+}
+
+@GLOSSDEF{ficha_nadador, 
+    word       = {ficha nadador}, 
+    definition = {Disposición de datos pertenecientes a un nadador, tanto de carácter personal como obtenidos en la realización de test o competiciones.}, 
+    sort-word  = {ficha nadador} 
+}
+
+@GLOSSDEF{microciclo, 
+    word       = {microciclo}, 
+    definition = {Conjunto de sesiones que tienen un objetivo concreto. Como su nombre indica, son ciclos breves de entrenamiento. Comúnmente, los microciclos hacen referencia a cada sesión de entrenamiento que realice un entrenador.}, 
+    sort-word  = {microciclo} 
+}
+
+@GLOSSDEF{mesociclo, 
+    word       = {mesociclo}, 
+    definition = {Bloques de microciclos ordenados para conseguir un objetivo determinado: representan etapas relativamente acabas del proceso de entrenamiento que permiten asegurar el desarrollo de una capacidad.}, 
+    sort-word  = {mesociclo} 
+}
+
+@GLOSSDEF{macrociclo,
+	word	   = {macrociclo},
+	definition = {Bloque de mesociclos. La idea equivale al concepto de periodo de entrenamiento, los que normalmente suelen ir separados por reposos.},
+	sort-word  = {macrociclo}
+}
+
+@GLOSSDEF{planificacion,
+	word	   = {planificación},
+	definition = {Plan general, metódicamente organizado y frecuentemente de gran amplitud, para obtener un objetivo determinado.},
+	sort-word  = {planificación}
+}
+
+@GLOSSDEF{mujika,
+	word	   = {índice de Mujika},
+	definition = {Parámetro.},
+	sort-word  = {índice de Mujika}
+}
+
+@GLOSSDEF{volumen,
+	word	   = {volumen},
+	definition = {Referente a los ejercicios. Mide la cantidad total de metros realizados en una sesión de entrenamiento.},
+	sort-word  = {volumen}
+}
+
+@GLOSSDEF{carga,
+	word	   = {carga},
+	definition = {Factor de acumulación en un deportista. Queda definido por el volumen y la intensidad, o también por el volumen multiplicado por el índice de Mujika.},
+	sort-word  = {carga}
+}
+
+@GLOSSDEF{p,
+	word	   = {intensidad},
+	definition = {Referente a los ejercicios. Grado en el que se realizan los ejercicios de natación.},
+	sort-word  = {intensidad}
+}
+
+@GLOSSDEF{aerobico,
+	word	   = {aeróbico},
+	definition = {Referentes a los tipos de ejercicios. Incluyen cualquier tipo de ejercicio que se practique a niveles moderados de intensidad durante periodos de tiempo largos.},
+	sort-word  = {aeróbico}
+}
+
+@GLOSSDEF{anaerobico,
+	word	   = {anaeróbico},
+	definition = {Referentes a los tipos de ejercicios. Comprenden actividades breves basadas en la fuerza.},
+	sort-word  = {anaeróbico}
+}
+
+@GLOSSDEF{ejtecnicos,
+	word	   = {técnicos},
+	definition = {Referentes a los tipos de ejercicios. Aplicación de métodos para mejora de cada uno de los estilos de natación.},
+	sort-word  = {técnicos}
+}
+
+@GLOSSDEF{diario,
+	word	   = {diario},
+	definition = {Cuaderno o libro en que se recogen acontecimientos y pensamientos día a día.},
+	sort-word  = {diario}
 }
